# templator_Sheschire

./: .copier-answers.yml  .editorconfig  .folderslintrc  .gitattributes  .gitconfig  .gitignore  .java.policy  .ls-lint.yml  .npmrc  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Dockerfile.build.dk  Jenkinsfile  README.md  SUPPORT.md  argv.json  commitlint.config.js  extensions.json  launch.json  launch.ps1  poetry.toml  pyproject.toml  tasks.json  tasks.py  templator.py  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-enhancement-request.md  config.yml
.github/workflows/: release.yml
.tours/: add-new-dependency.tour  understand-the-project-structure.tour
atest/env/: default.env
atest/suites/: __init__.robot  index.robot
src/u_iris/templator/rf-resources/: index.resource
src/u_iris/templator/rf-resources/Common/: Common.resource  index.resource
src/u_iris/templator/rf-resources/JDD/: JDD.resource  index.resource
